re PR fortran/32315 (DATA with implied-do: Bounds checks missing [regression vs. g77])

2008-02-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32315
	* data.c (gfc_assign_data_value): Add bounds check for array
	references.

2008-02-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32315
	* gfortran.dg/data_bounds_1.f90: New test.

From-SVN: r132113